RESOLVED FIXED131474
Fix build failure when #if USE(XPC_SERVICES) is false.
https://bugs.webkit.org/show_bug.cgi?id=131474
Summary Fix build failure when #if USE(XPC_SERVICES) is false.
Jeremy Jones
Reported 2014-04-09 21:01:43 PDT
Fix build failure when #if USE(XPC_SERVICES) is false.
Attachments
Patch (1.54 KB, patch)
2014-04-09 21:03 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2014-04-09 21:03:26 PDT
WebKit Commit Bot
Comment 2 2014-04-09 21:51:20 PDT
Comment on attachment 229021 [details] Patch Clearing flags on attachment: 229021 Committed r167064: <http://trac.webkit.org/changeset/167064>
WebKit Commit Bot
Comment 3 2014-04-09 21:51:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.