Fix build failure when #if USE(XPC_SERVICES) is false. https://bugs.webkit.org/show_bug.cgi?id=131474

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-04-09
Reviewed by Dan Bernstein.

Fix build.

* UIProcess/ios/WebProcessProxyIOS.mm:
Add #if around BackgroundTabFlags ForegroundTabFlags to prevent unused variable error.

Canonical link: https://commits.webkit.org/149546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167064 268f45cc-cd09-0410-ab3c-d52691b4dbfc